2001-10-21  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_get_link_name_from_desktop):
	Use the localized string

=== nautilus 1.0.5 ===

2001-10-19  Darin Adler  <darin@bentspoon.com>

	* NEWS: Add mention of Mozilla 0.9.5.
	* THANKS: Thank Frank.
	* README: Make a little more up to date, but still needs work.

2001-10-18  Darin Adler  <darin@bentspoon.com>

	Fixed a bunch of bugs that were causing directory display to be
	even slower than it ought to be. The hysteresis wasn't working at
	all because of the confusion about when files were ready for
	display. Also changed hysteresis to 1 second and file chunk to 300
	files instead of 100.

	* libnautilus-private/nautilus-directory-async.c:
	(link_info_gmc_link_read_callback): Fix function so it uses the
	actual URI, not the thing that starts with URL. The old way it
	was always failing to read. There were some other backwards if
	statements in here too.
	
	* src/file-manager/fm-directory-view.h:
	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_initialize): Create "non-ready files" hash.
	(fm_directory_view_destroy): Destroy it.
	(real_file_still_belongs): Move this here from FMListView.
	(still_should_show_file): New function, used to decide whether to
	keep a file in the window or not.
	(ready_to_load): New function, used to decide whether a file is
	ready enough to show in the window.
	(process_new_files): Move files from the "new files" lists to the
	"old files" lists, filtering out ones that are not ready to load
	and putting those into the "non-ready files" hash. Also sort the
	added files so the ones that show up at the top are the first to
	be added.
	(split_off_first_n): Renamed to eliminate the "g" namespace.
	(process_old_files): The guts of what used to be in
	display_pending_files. Now we use a separate signal for remove
	instead of just reusing the changed signal.